--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+0.1.1 2016-05-30 thbe <project@bendler-net.de>
+ * Add some parameter checks
+
 0.1.0 2016-05-26 thbe <project@bendler-net.de>
  * Initial release
