--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.1.2 2016-05-30 thbe <project@bendler-net.de>
+ * Fix stdlib dependency
+ * Remove 5.x support
+ * Fix spelling in README.md
+
 0.1.1 2016-05-30 thbe <project@bendler-net.de>
  * Add some parameter checks
 
